Increased permgen size